syntax = "proto3";

package booking;

option go_package = "services/booking/proto";

import "model/task/task.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";

service Booking {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {
        option (google.api.http) = {
            post: "/booking/create_task"
            body: "*"
        };
    }

    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {
        option (google.api.http) = {
            get: "/booking/get_task/{task_id}"
        };
    }

    rpc AcceptTask(AcceptTaskRequest) returns (AcceptTaskResponse) {
        option (google.api.http) = {
            post: "/booking/accept_task/{task_id}"
            body: "*"
        };
    }

    rpc ConfirmTasker(ConfirmTaskerRequest) returns (ConfirmTaskerResponse) {
        option (google.api.http) = {
            post: "/booking/confirm_tasker"
            body: "*"
        };
    }
}

message CreateTaskRequest {
    string detail = 1 [(buf.validate.field).string.min_len = 1];
}

message CreateTaskResponse {
    task.Task task = 1;
}

message AcceptTaskRequest {
    string task_id = 1;
}

message AcceptTaskResponse {
    bool isSuccess = 1;
}

message ConfirmTaskerRequest {
    string task_id = 1;
    string tasker_id = 2;
}  

message ConfirmTaskerResponse {
    bool isSuccess = 1;
}

message GetTaskRequest {
    string task_id = 1;
}

message GetTaskResponse {
    task.Task task = 1;
}